# lab_3

./: .gitignore  CMakeLists.txt  Lab3.xlsx  README.md  Отчёт ЛР3 Кочкин В.Р. Фиб-3301.docx
task0/: CMakeLists.txt  task0.cpp
task1/: CMakeLists.txt  task1.cpp  task1.h
task2/: CMakeLists.txt  task2.cpp  task2.h
task3/: CMakeLists.txt  task3.cpp  task3.h
task4/: CMakeLists.txt  task4.cpp
task5/: CMakeLists.txt  task5.cpp  task5.h
task6/: CMakeLists.txt  task6.cpp  task6.h
