# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("lab_3")

# Включите подпроекты.
add_subdirectory ("task0")
add_subdirectory ("task1")
add_subdirectory ("task2")
add_subdirectory ("task3")
add_subdirectory ("task4")
add_subdirectory ("task5")
add_subdirectory ("task6")
