# CMakeList.txt: проект CMake для task0; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (task1 "task1.cpp" "task1.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
